refactor: 정적 팩토리 메서드 적용 및 공통 메서드 추출